[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/Tablet Information/BestiaryEnemy_Tablet.gd" type="Script" id=1]

[node name="BestiaryEnemy" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Panel_Enemy" type="Panel" parent="."]
visible = false
self_modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel_exit" type="Button" parent="Panel_Enemy"]
self_modulate = Color( 0.470588, 0.470588, 0.470588, 0.819608 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="exit_Enemy" type="Button" parent="."]
visible = false
anchor_right = 0.147
anchor_bottom = 0.194
margin_left = 88.0
margin_top = 82.0
margin_right = 88.006
margin_bottom = 82.016
text = "x"

[connection signal="pressed" from="Panel_Enemy/Panel_exit" to="." method="_on_Panel_exit_pressed"]
[connection signal="pressed" from="exit_Enemy" to="." method="_on_exit_Enemy_pressed"]
